# XDC-DApp-Summer-hackathon

./: .gitignore  .gitmodules  LICENSE  README.md  Readme.md  TheBlockchainLandGame  about.html  app.py  config-overrides.js  contact.html  contract.sol  deploy.json  deployxdc.json  hardhat.config.js  hardhat.config.ts  index_XDC.js  installer.php  main.sol  messages.py  next.config.js  package-lock.json  package.json  registered_users.py  requirements.txt  user.py  vue.config.js  wallet_handler.py  webpack.config.js  wordfence-waf.php
Accord/: README.md  package.json
FrontEnd/: apikey.html  buy-success.html  dashboard.html  index.html  merchant-login.html  merchant-register.html  profile.html  transactions.html  widget.html
Haunted-Frontend/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json
XDC/: Keysafe.sol
app/: .env copy  package.json
aqua/: greenchat.aqua
backend/: main.py
cache/: solidity-files-cache.json
components/: playingBar.js  podcastCard.js
contractAbi/: Sawti.json
contracts/: Assets.sol  Aureus.sol  ChainFiles.sol  Domains.json  Domains.sol  Domains_metadata.json  ERC20Gateway.sol  GreenAuction.sol  GreenChat.sol  GreenDao.sol  GreenFactory.sol  GreenGrant.sol  GreenLearning.sol  GreenVote.sol  LendingPool.sol  MainGame.sol  Miner.sol  Staking.sol  Townhall.sol  Vault.sol  (+1 more)
keysafe-app2/app/: Cargo.toml  build.rs  conf.toml  log4rs.yml  schema.sql
keysafe-app2/app/src/: main.rs
keysafe-app2/app/src/ecall/: mod.rs
keysafe-app2/app/src/endpoint/: middleware.rs  service.rs
keysafe-app2/app/src/persistence/: mod.rs
(+1138 files in other folders)
